- Update ctrl+keys to cycle through cells linearly (#5)
- Update tab behavior to cycle through the grid only once (#5)
- Update matching number highlighting to be less aggressive
- Update earmark highlighting to the new accent color palette
- Add a special interaction for matching number highlighting wherein
  clicking on a non-empty cell will only trigger the number picker on
  the second click
- Add strike-through for earmark warnings
- Add large zoom size for earmarks
- Add pause animation
- Add short animation to autoclean earmarks
- Add headerbar transition effect
- Cap grid margin size at 25 and top offset at 40
- Remove unfullscreen button
- Updated translations:
  Juliano de Souza Camargo (pt_BR); Martin (sl); Anders Jonsson (sv);
  Yuri Chornoivan (uk); Luming Zh (zh_CN). Yosef Or Boczko (he); Sergej
  A. (ru); Muhammet Kara (tr). Rafael Fontenelle (pt_BR); Martin (sl);
  Sabri Ünal (tr); Baxrom Raxmatov (uz); Daniel Mustieles (es); Álvaro
  Burns (pt_BR); Peter Mráz (sk); Vasil Pupkin (be);

48.0 - March 14, 2025
==========================

- Let the about dialog track appdata releases
- Updated translations:
  Jordi Mas (ca); Jiri Grönroos (fi); Balázs Úr (hu).

48.rc - February 28, 2025
==========================

- Update the selection highlighting to more closely follow the focus
- Fix the focus jumping around on window resize
- Fix custom game's missing icon
- Fix print multiple puzzles dialog's scaling at lower resolutions
- Fix reset puzzle incorrectly affecting the timer after a reload
- Fix show possibilities setter not working after a reload
- Add Accessible label to earmark picker buttons
- Updated translations:
  Daniel Rusek (cs); Bruce Cowan (en_GB); Álvaro Burns (pt_BR).

48.beta - January 31, 2025
==========================

- Add custom accent color palette of 18 colors
- Add support for row/column/block highlighting with accent colors
- Update selection and highlighter colors to use oklab

48.alpha - January 10, 2025