@@ -15,6 +15,7 @@
 - Add a special interaction for matching number highlighting wherein
   clicking on a non-empty cell will only trigger the number picker on
   the second click
+- Add autosave every 5 minutes
 - Add strike-through for earmark warnings
 - Add large zoom size for earmarks
 - Add pause animation
